--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
